compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__numbers__float_equality.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
assertion_line: 181
expression: "\nfn go() {\n  1.0 != 2.0\n  1.0 == 2.0\n}\n"
---
----- SOURCE CODE

fn go() {
  1.0 != 2.0
  1.0 == 2.0
}


----- COMPILED JAVASCRIPT
function go() {
  1.0 !== 2.0;
  return 1.0 === 2.0;
}
