compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__numbers__float_equality1.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
assertion_line: 193
expression: "\nfn go(y) {\n  let x = 1.0\n  x == y\n}\n"
---
----- SOURCE CODE

fn go(y) {
  let x = 1.0
  x == y
}


----- COMPILED JAVASCRIPT
function go(y) {
  let x = 1.0;
  return x === y;
}
