compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__numbers__float_literals.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
assertion_line: 23
expression: "\nfn go() {\n    1.5\n    2.0\n    -0.1\n    1.\n}\n"
---
----- SOURCE CODE

fn go() {
    1.5
    2.0
    -0.1
    1.
}


----- COMPILED JAVASCRIPT
function go() {
  1.5;
  2.0;
  -0.1;
  return 1.;
}
