compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__numbers__int_equality.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
assertion_line: 157
expression: "\nfn go() {\n  1 != 2\n  1 == 2\n}\n"
---
----- SOURCE CODE

fn go() {
  1 != 2
  1 == 2
}


----- COMPILED JAVASCRIPT
function go() {
  1 !== 2;
  return 1 === 2;
}
