compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__numbers__int_negation.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
assertion_line: 227
expression: "\nfn go() {\n  let a = 3\n  let b = -a\n}\n"
---
----- SOURCE CODE

fn go() {
  let a = 3
  let b = -a
}


----- COMPILED JAVASCRIPT
function go() {
  let a = 3;
  let b = - a;
  return b;
}
