compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__numbers__operator_precedence.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
assertion_line: 205
expression: "\nfn go() {\n  2.4 *. { 3.5 +. 6.0 }\n}\n"
---
----- SOURCE CODE

fn go() {
  2.4 *. { 3.5 +. 6.0 }
}


----- COMPILED JAVASCRIPT
function go() {
  return 2.4 * (3.5 + 6.0);
}
